--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,5 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 )
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
+target_link_libraries(${PROJECT_NAME} PRIVATE horizongui glfw freetyped)
 target_include_directories(${PROJECT_NAME} PRIVATE deps/HorizonGUI/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/deps/HorizonGUI/bin/horizongui.lib 
-	${CMAKE_CURRENT_SOURCE_DIR}/deps/HorizonGUI/bin/glfw3.lib 
-	${CMAKE_CURRENT_SOURCE_DIR}/deps/HorizonGUI/bin/freetyped.lib)
